--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bridge-gaza",
+  "name": "madar-studio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -50,11 +50,11 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.545.0",
     "mongoose": "^8.19.1",
-    "next": "15.5.4",
+    "next": "16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
+    "react": "19.2.3",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.1.0",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^3.2.1",
