--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mongoose": "^8.19.1",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.3",
